# requirement-master

./: .gitignore  CONTRIBUTING.en.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  README.en.md  README.md  REVIEW_REPORT.md  package-lock.json  package.json
app/: .env.example  auth.py  config.py  db.py  main.py  models.py  pyproject.toml  schemas.py
app/prompts/: __init__.py  assistant_system.md  auto_agent.md  clarify_system.md  summarize.md
app/routers/: assistant.py  attachments.py  auth.py  auto.py  calendar.py  chat.py  client_devices.py  comments.py  decompositions.py  deliveries.py  delivery_upload.py  health.py  jobs.py  knowledge.py  meetings.py  notifications.py  planning.py  project_drive.py  projects.py  push.py  reminders.py  requirements.py  sync.py  users.py  voice.py  workspaces.py
app/services/: activity.py  assignments.py  auto_agent.py  delivery_doc.py  drive_comment_agent.py  file_parser.py  jobs.py  knowledge.py  lifecycle.py  llm_agent.py  meeting_agent.py  notifications.py  partial_uploads.py  permissions.py  presence.py  push_bus.py  schedule.py  schema_migrations.py  sync_manifest.py  task_decomposition.py  workspaces.py
asr_service/: requirements.txt  server.py
client/: build_exe.bat  install-client.ps1  install-client.sh  launch.bat  launch.ps1  launch.sh  requirements.txt  yqgl_dashboard.py  yqgl_tray.py
client-tauri/: BUILD.md  package.json  postcss.config.js  tailwind.config.js
client-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client-tauri/src-tauri/capabilities/: default.json
client-tauri/src-tauri/icons/: icon.icns
client-tauri/src-tauri/src/: config.rs  deep_link.rs  delivery.rs  error.rs  http.rs  lib.rs  main.rs  notify.rs  reminders.rs  spec_watch.rs  sse.rs  sync.rs  tray.rs  upload.rs  window.rs
client-tauri/src-tauri/src/commands/: auth.rs  config.rs  delivery.rs  mod.rs  requirements.rs  shell.rs  submitter.rs  sync.rs  workspace.rs
docs/: ITERATIONS.md
scripts/: check_asr_status.py  check_zimage_env.py  deploy.py  deploy_web.py  download_models.py  e2e_ai_path.py  e2e_client_onboarding.py  e2e_deliver.py  e2e_setup_client.py  e2e_submit_human.py  (+30 more)
(+207 files in other folders)
