[project]
name = "yqgl-app"
version = "0.1.0"
description = "需求管理大师 FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.12",
    "itsdangerous>=2.2",
    "httpx>=0.27",
    "anthropic>=0.39",
    "markitdown[all]>=0.0.1a3",
    "pillow>=11",
]
